proxmox/roles/talos-apps/adguard/adguard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-ui
  annotations:
    # kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: adguard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 3000
  # tls:
  #   - hosts:
  #       - adguard.local
  #     secretName: adguard-tls
